--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rleader",
   "version": "1.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "homepage": "https://Ereyzer.github.io/rleader",
   "scripts": {
     "dev": "parcel src/*.html",
